[project]
name = "pytest-mojo"
version = "v24.6"
description = "Mojo🔥 language test runner plugin for pytest. (aka pytest-mojo)"
authors = [{name = "Alex G Rice", email = "alex@ricegeo.dev"}]
license = {file = "LICENSE"}
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pytest_mojo"]

[project.entry-points.pytest11]
"pytest_mojo" = "pytest_mojo.plugin"
